# Battleship

./: CMakeLists.txt  main.cpp  test.cpp
Bots/: Bot_Arrange.cpp  Bot_Arrange.h  Bot_Attack.cpp  Bot_Attack.h
Field/: Field.cpp  Field.h  Ship.cpp  Ship.h
